--- a/scripts/Makefile.dtbs
+++ b/scripts/Makefile.dtbs
@@ -119,6 +119,10 @@ dtc_cpp_flags = -Wp,-MMD,$(depfile).pre.tmp -nostdinc -I $(DTC_INCLUDE) -undef -
 
 dtc-tmp = $(subst $(comma),_,$(dot-target).dts.tmp)
 
+ifeq ($(CONFIG_OF_OVERLAY),y)
+DTC_FLAGS += -@
+endif
+
 quiet_cmd_dtc = DTC $(quiet_dtb_check_tag) $@
       cmd_dtc = \
 	$(HOSTCC) -E $(dtc_cpp_flags) -x assembler-with-cpp -o $(dtc-tmp) $< ; \
